Fixed arrow icons not changing their dark mode color

--- a/index.css
+++ b/index.css
@@ -136,8 +136,7 @@ a:hover {
 }
 
 /* Interests Card */
-#arrowIcon,
-#projectsIcon {
+#arrowIcon {
     height: 22px;
 }
 #interests,
